alterando label e input.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Cadastra-se</h1>
     <form>
-        <input type="text" placeholder="Nome">
-        <input type="text" placeholder="E-mail"><br>
-        <input type="text" placeholder="Sobrenome">
-        <input type="text" placeholder="Senha">
+        <label for="name">Nome</label> <input type="name"> 
+        <label for="email">E-mail</label><input type="email"><br>
+        <label for="text">Sobrenome</label> <input type="text"> 
+        <label for="password">Senha</label> <input type="password"> 
         <button type="submit">Finalizar cadastro</button><br>
         <input type="checkbox" id="checkbox-aceitar-termos"> <label" for="checkbox">Li e aceitos os termos</label>
     </form>
