--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Cadastra-se</h1>
     <form>
-        <label for="name">Nome</label> <input type="name"> 
+        <label for="name">Nome</label> <input type="text" name= "nome"> 
         <label for="email">E-mail</label><input type="email"><br>
         <label for="text">Sobrenome</label> <input type="text"> 
         <label for="password">Senha</label> <input type="password"> 
